# peoples-pay-supply-chain-extension

./: .env.example  .gitignore  Pipfile  payload.json  pyproject.toml  requirements.txt  sqlquery.txt
apps/inventory/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/inventory/migrations/: 0001_initial.py  0002_alter_productinventory_product.py  0002_batch_brand_store_remove_product_price_and_more.py  0003_product_category_product_description_product_volume_and_more.py  0004_approval_customers_saleszone_and_more.py  0005_alter_batch_options_alter_batchstorethrough_options_and_more.py  0006_inventorytransfer.py
apps/orders/: admin.py  models.py  serializers.py  urls.py  views.py
apps/orders/migrations/: 0001_initial.py  0002_orderdetail_item_code_orderdetail_order_and_more.py  0003_alter_order_status.py  0004_rename_customerid_order_placed_by_and_more.py
apps/transactions/: admin.py  models.py  serializers.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: settings.py  urls.py  wsgi.py
utils/: exceptions.py  utils.py
